IE fix for vertically centering .project-image-wrap img using flex

--- a/resources/sass/_project-display.scss
+++ b/resources/sass/_project-display.scss
@@ -4,11 +4,18 @@
       text-align: center;
       box-shadow: 0 0 10px 0 rgba($black,.5);
       margin-bottom: rem(20px);
-      min-height: 100%;
       position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
+      // IE workaround for flex centering
+      min-height: 100px;
+      height: 100%;
+
+      img {
+        max-width: 100%;
+        flex-shrink: 0;
+      }
 
       @media(min-width: map_get($grid-breakpoints,'md')) {
         margin-bottom: 0;
@@ -41,9 +48,6 @@
     }
     h2 {
       font-size: rem(32px);
-    }
-    img {
-      max-width: 100%;
     }
   }
   .projects-enter-active, .projects-leave-active {
